HelloUltraviolet/Fixtures/RejectedSource/Statements/AssignImmutableLet/Expected.uv
//! Expected diagnostic metadata for the AssignImmutableLet rejected-source specimen.

expectedDiagnostic("E-MOD-2401", "rule.18.Assign-Immutable-Err")
